--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@ h1{
     border-radius: 25px;
     border:4px solid #bde0ff;
     padding: 3px;
-    margin: auto;
+    margin: 15px;
     width: 15%;
     height: 90%;
     background-size: cover; 
@@ -52,4 +52,12 @@ button:hover {
 }
 .opacity{
     opacity: 0.1;
+}
+.blur{
+    filter: blur(5px);
+}
+#giveUpBtn{
+    position: fixed;
+    top:40%;
+    left:5%;
 }
