--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 body{
     font-family: 'Indie Flower', cursive;
     background-color: #f0f8ff;
+    height: 100%;
 }
 .main{
     width:90%;
-    height:600px;
+    height: 100%;
     margin: auto;
 }
 h1{
@@ -15,7 +16,7 @@ h1{
 .row{
     margin: auto;
     width: 100%;
-    height: 180px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-content: space-between;
@@ -26,7 +27,7 @@ h1{
     padding: 3px;
     margin: 15px;
     width: 15%;
-    height: 90%;
+    height: 12vh;
     background-size: cover; 
     /* background-image: url("../images/card1.PNG"); */
 }
